[gd_scene load_steps=6 format=3 uid="uid://cwjjs3dp5wxu1"]

[ext_resource type="Script" uid="uid://u8jgjpikyfey" path="res://scenes/hud/hud.gd" id="1_48c2t"]
[ext_resource type="FontFile" uid="uid://bic3jrobjjui" path="res://assets/font/nicoca_v2-5.ttf" id="2_cgeww"]
[ext_resource type="Texture2D" uid="uid://i5s0gre80unf" path="res://assets/Items/Fruits/apple1.png" id="3_0bx4p"]
[ext_resource type="Theme" uid="uid://bhklv4efuna0m" path="res://assets/theme/main.tres" id="4_mgtrf"]

[sub_resource type="LabelSettings" id="LabelSettings_c45xl"]
font = ExtResource("2_cgeww")
font_size = 30
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_48c2t")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Level" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Level 1"
label_settings = SubResource("LabelSettings_c45xl")
vertical_alignment = 1

[node name="Timer" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "00:00:00"
label_settings = SubResource("LabelSettings_c45xl")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Item" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "99"
label_settings = SubResource("LabelSettings_c45xl")
horizontal_alignment = 2
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/Item"]
layout_mode = 0
offset_left = 297.0
offset_top = -11.0
offset_right = 337.0
offset_bottom = 29.0
scale = Vector2(1.56, 1.52)
texture = ExtResource("3_0bx4p")

[node name="Background" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="GameClear" type="CenterContainer" parent="Background"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Background/GameClear"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme = ExtResource("4_mgtrf")

[node name="VBoxContainer" type="VBoxContainer" parent="Background/GameClear/PanelContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="Background/GameClear/PanelContainer/VBoxContainer"]
modulate = Color(1, 0.772549, 0.2, 1)
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 60
text = "Clear!"
horizontal_alignment = 1

[node name="Score" type="Label" parent="Background/GameClear/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Score:99999"
horizontal_alignment = 1

[node name="Main" type="Button" parent="Background/GameClear/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Main"

[node name="Quit" type="Button" parent="Background/GameClear/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Quit"

[connection signal="pressed" from="Background/GameClear/PanelContainer/VBoxContainer/Main" to="." method="_on_main_pressed"]
[connection signal="pressed" from="Background/GameClear/PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
